feat: implemented closed-alpha
